# variant-go-server

./: .gitignore  Cargo.toml  LICENSE  LICENSE_MIT  README.md  docker-compose.yml  privacy_policy.md
.github/: FUNDING.yml
client/: Cargo.toml  Dioxus.toml  Dockerfile  Dockerfile.dev  dist.sh  serve.py
client/.cargo/: config.toml
client/src/: board.rs  config.rs  create_game.rs  game_pane.rs  game_view.rs  lib.rs  main.rs  message.rs  networking.rs  palette.rs  seats.rs  state.rs  text_input.rs  utils.rs  views.rs  window.rs
client/src/agents/: board_store.rs  game_store.rs  mod.rs
client/src/game_pane/: mode_list.rs
client/src/views/: create_game.rs
client/www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
repl/: Cargo.toml
repl/src/: main.rs
server/: Cargo.toml  Dockerfile.dev  README.md  run.sh
server/migrations/2020-08-18-124338_create_users/: down.sql  up.sql
server/migrations/2020-09-18-095050_game_owner/: down.sql  up.sql
server/migrations/2021-03-30-114653_user_integration_access/: down.sql  up.sql
server/src/: assume.rs  db.rs  game.rs  game_room.rs  main.rs  message.rs  schema.rs  server.rs
shared/: Cargo.toml
shared/src/: assume.rs  game.rs  lib.rs  message.rs
shared/src/game/: board.rs  clock.rs  export.rs  tests.rs
shared/src/game/replays/: 20-mirth-3color.txt  53-seequ-hiddenmove.txt  antti-4+1-1.txt
shared/src/game/snapshots/: shared__game__tests__replay_snapshots@20-mirth-3color.txt.snap  shared__game__tests__replay_snapshots@53-seequ-hiddenmove.txt.snap  shared__game__tests__replay_snapshots@antti-4+1-1.txt.snap
shared/src/states/: free_placement.rs  mod.rs  play.rs  scoring.rs
shared/src/states/play/: n_plus_one.rs  tetris.rs  traitor.rs
sounds/: README.md
store/: Cargo.toml
store/src/: lib.rs  store.rs
