[package]
name = "client"
version = "0.1.0"
authors = ["Jani Mustonen <janijohannes@kapsi.fi>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"

yew = "0.17"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "Attr",
  "CanvasRenderingContext2d",
  'Document',
  'Element',
  "Event",
  "EventTarget",
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "MessageEvent",
  'MouseEvent',
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlInputElement",
  "Node",
  "ProgressEvent",
  "Storage",
  "Text",
  "WebSocket",
  "Window"
]


[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
