[package]
name = "repl"
version = "0.1.0"
authors = ["Jani Mustonen <janijohannes@kapsi.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.21.0"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
futures-channel = "0.3"
tokio = { version = "1.24.2", default-features = false, features = ["io-std", "macros", "time", "rt"] }
url = "2.1.1"

serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"

dotenv = "0.15.0"

shared = { path = "../shared" }
