[package]
name = "server"
version = "0.1.0"
authors = ["Jani Mustonen <janijohannes@kapsi.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0"
actix-web-actors = "2.0"
actix-rt = "1.0"
env_logger = "0.7"

serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"

rand = "*"
