[package]
name = "server"
version = "0.1.0"
authors = ["Jani Mustonen <janijohannes@kapsi.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
actix-rt = "2.9"
futures-util = "0.3.30"
env_logger = "0.7"

chrono = { version = "= 0.4.29" }

serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"

rand = "0.7.3"
uuid = { version = "0.8", features = ["serde", "v4"] }

diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"

shared = { path = "../shared" }
