[package]
name = "shared"
version = "0.1.0"
authors = ["Jani Mustonen <janijohannes@kapsi.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmaps = "2.1"
typenum = "1.12"
itertools = "0.9"

tinyvec = { version = "1.0", features = ["serde", "alloc"] }

serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
